# datacube

godot/: Rustext.gdextension  controller.gd  icon.svg.import  main.tscn  mesh_instance_3d.tscn  project.godot
godot/materials/: blue.tres  green.tres  orange.tres  red.tres  white.tres  yellow.tres
rust/: Cargo.toml
rust/benches/: bench_cubestate.rs
rust/src/: lib.rs
rust/src/datacube/: cube.rs
